# plasma-dsp

./: .clang-format  .gitignore  CITATION.cff  CMakeLists.txt  CODEOWNERS  Doxyfile  LICENSE  README.md  conanfile.py  conanfile.txt  pyproject.toml
app/: CMakeLists.txt  cfar_1d.cpp  cfar_driver.cpp  fmcw_driver.cpp  main.cpp
cmake/: BuildType.cmake  plasma-dsp-config.cmake  plasma_dsp-config.cmake
examples/: CMakeLists.txt  cfar1d-example.cpp  cfar1d_example.cpp  cfar2d_example.cpp  cfarTest.cc  cfar_1d.cpp  cfar_2d.cpp  dummy_target.cpp  fft_test.cpp  fmcw-example.cpp  fmcw_driver.cpp  fmcw_example.cpp  main.cpp  parcTest.cc  profm.cc  pulse_compression.cc  pulse_doppler_processing.cc
include/: CMakeLists.txt  LinearFMWaveform.h  PulsedWaveform.h  SquareWaveform.h  Waveform.h  barkercode.h  constants.h  linearfmwaveform.h  phasecode.h  phasecodedwaveform.h  pulsedwaveform.h  spectrogram.h  squarewaveform.h  utils.h  waveform.h  window.h
include/plasma-dsp/: CMakeLists.txt  MatrixBaseAddons.h  barker-coded-waveform.h  barker_coded_waveform.h  barkercode.h  cfar.h  cfar1d.h  cfar2d.h  circ-shift.h  circ_shift.h  config.h.in  constants.h  detector.h  eigen-config.h.in  fmcw-waveform.h  fmcw_waveform.h  fmcwwaveform.h  linear-fm-waveform.h  linear_fm_waveform.h  linearfmwaveform.h  matrix-utils.h  matrix2d.h  matrix_utils.h  pcfm.h  phase-coded-waveform.h  phase_coded_waveform.h  phasecode.h  phasecodedwaveform.h  pulse_doppler.h  pulsed-waveform.h  pulsed_waveform.h  pulsedwaveform.h  range-doppler.h  rangedoppler.h  signal-processing.h  spectrogram.h  square-waveform.h  square_waveform.h  squarewaveform.h  utils.h  (+3 more)
include/plasma_dsp/: CMakeLists.txt  MatrixBaseAddons.h  cfar1d.h  cfar2d.h  circ_shift.h  constants.h  cpm.h  detector.h  fft.h  fftshift.h  file.h  filter.h  fmcw_waveform.h  lfm.h  linear_fm_waveform.h  matrix_utils.h  optimization.h  parc.h  pcfm.h  phase_code.h  phase_coded_waveform.h  processing.h  pulse_doppler.h  pulsed_waveform.h  signal_processing.h  spectrogram.h  square_waveform.h  utils.h  vector_utils.h  waveform.h  window.h
lib/: CMakeLists.txt  LinearFMWaveform.cc  PulsedWaveform.cc  SquareWave.cc  SquareWaveform.cc  barker-coded-waveform.cc  barkercode.cc  cfar.cc  cfar1d.cc  cfar2d.cc  cpm.cc  fft.cc  filter.cc  fmcw-waveform.cc  fmcw_waveform.cc  fmcwwaveform.cc  lfm.cc  linear-fm-waveform.cc  linear_fm_waveform.cc  linearfmwaveform.cc  optimization.cc  parc.cc  pcfm.cc  phase-code.cc  phase-coded-waveform.cc  phase_code.cc  phase_coded_waveform.cc  phasecode.cc  phasecodedwaveform.cc  processing.cc  pulse_doppler.cc  pulsed-waveform.cc  pulsed_waveform.cc  pulsedwaveform.cc  rangedoppler.cc  spectrogram.cc  square-waveform.cc  square_waveform.cc  squarewaveform.cc  utils.cc  (+2 more)
python/: common.py  linear_fm.py  pulse_doppler.py
python/plasma_dsp/: common.py  deconv.py  pulse_doppler.py
test/: CMakeLists.txt  hello_test.cc  test-fmcw-waveform.cc  test-linear-fm-waveform.cc  test-pcfm-waveform.cc  test-phase-coded-waveform.cc  test-square-waveform.cc  test_cfar.cc  test_fmcw_waveform.cc  test_linear_fm_waveform.cc  test_linearfmwaveform.cc  test_pcfm_waveform.cc  test_phase_coded_waveform.cc  test_pulse_doppler.cc  test_square_waveform.cc  test_squarewaveform.cc  test_window.cc
