[tool.poetry]
name = "plasma-dsp"
version = "1.0.0"
description = ""
authors = ["ShaneFlandermeyer <shaneflandermeyer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
jax = {extras = ["cpu"], version = "^0.4.4"}
matplotlib = "^3.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
